Added a quick jump box for easy traversal

--- a/guides/push.html
+++ b/guides/push.html
@@ -13,6 +13,7 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <a class="button" id="nxtbtn" href="pr.html">Create Feature Pull Requests</a>
+      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
       <a class="button" id="prebtn" href="pull.html">Update from GitHub (git pull)</a>
     </div>
 
@@ -43,5 +44,6 @@
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
+    <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
 </html>
