--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -12,6 +12,7 @@
     <h1>View Builds on Travis CI</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
       <a class="button" id="prebtn" href="amend.html">Amend Unpushed Commits</a>
     </div>
 
@@ -33,5 +34,6 @@
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
+    <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
 </html>
