--- a/guides/github.html
+++ b/guides/github.html
@@ -13,6 +13,7 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <a class="button" id="nxtbtn" href="sourcetree.html">Introduction to SourceTree</a>
+      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
     </div>
 
     <p id="description">This page will give you a brief guide on the <a href="https://github.com">GitHub.com</a> User Interface. It is color coded to tell you what it's referring to</p>
@@ -139,5 +140,6 @@
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
+    <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
 </html>
