--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -13,6 +13,7 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <a class="button" id="nxtbtn" href="commit.html">Commit a File</a>
+      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
       <a class="button" id="prebtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
     </div>
 
@@ -42,5 +43,6 @@
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
+    <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
 </html>
