Update text in breadcrumbs buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="/guides/pull.html">How to update local repo with new code from GitHub (pull)</a></li>
       <li><a href="/guides/push.html">How to push to GitHub</a></li>
       <li><a href="/guides/pr.html"><b>IMPORTANT</b> How to create a feature (Pull Requests)</a></li>
-      <li><a href="/guides/conflict.html">Resolve Merge Conflicts</a></li>
+      <li><a href="/guides/conflict.html">Resolve Code Conflicts</a></li>
       <li><a href="/guides/rebase.html">Rebase Branch against another branch</a></li>
       <li><a href="/guides/amend.html"><i>Optional</i> Amend unpushed commits</a></li>
       <li><a href="/guides/buildserver.html"><i>Optional</i> View CI Builds</a></li>
