--- a/guides/pr.html
+++ b/guides/pr.html
@@ -12,7 +12,7 @@
     <h1>Issue Pull Request (PR) for features</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="conflict.html">Resolve Merge Conflicts</a>
+      <a class="button" id="nxtbtn" href="conflict.html">Resolve Code Conflicts</a>
       <select name="breadcrumb-jump" id="breadcrumb-select"></select>
       <a class="button" id="prebtn" href="push.html">Push to GitHub</a>
     </div>
