--- a/guides/amend.html
+++ b/guides/amend.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amend Commits - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
   </head>
 
   <body>
