Changed the way breadcrumbs are rendered
This is to prevent it from wrapping around the description on smaller screens

--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -14,8 +14,10 @@
     <h1>View Builds on Travis CI</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="amend.html">Amend Unpushed Commits</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="amend.html">Amend Unpushed Commits</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+      </div>
     </div>
 
     <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
