--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -14,9 +14,11 @@
     <h1>Resolve Conflicts in Code</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="rebase.html">Rebase Branch</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="pr.html">Create Feature Pull Requests</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="pr.html">Create Feature Pull Requests</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="rebase.html">Rebase Branch</a>
+      </div>
     </div>
 
     <p id="description">The following guide shows you how to resolve conflicts if it happens (either through rebasing or pulling code). Console usage is required</p>
