--- a/guides/github.html
+++ b/guides/github.html
@@ -14,8 +14,10 @@
     <h1>Introduction to GitHub</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="sourcetree.html">Introduction to SourceTree</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+      <div id="breadcrumb-ctrl">
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="sourcetree.html">Introduction to SourceTree</a>
+      </div>
     </div>
 
     <p id="description">This page will give you a brief guide on the <a href="https://github.com">GitHub.com</a> User Interface. It is color coded to tell you what it's referring to</p>
