--- a/guides/pr.html
+++ b/guides/pr.html
@@ -14,9 +14,11 @@
     <h1>Issue Pull Request (PR) for features</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="conflict.html">Resolve Code Conflicts</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="push.html">Push to GitHub</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="push.html">Push to GitHub</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="conflict.html">Resolve Code Conflicts</a>
+      </div>
     </div>
 
     <p id="description">This will show you how to do git-flow style of committing. Ideal git guidelines is that we never commit anything to master directly. So instead, we make use
