--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -14,9 +14,11 @@
     <h1>Introduction to SourceTree</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="clone.html">Clone a Repository</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="github.html">Introduction to GitHub</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="github.html">Introduction to GitHub</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="clone.html">Clone a Repository</a>
+      </div>
     </div>
 
     <p id="description">This page will give you a brief guide on the SourceTree User Interface. It is color coded to tell you what it's referring to</p>
