--- a/guides/clone.html
+++ b/guides/clone.html
@@ -14,9 +14,11 @@
     <h1>Clone Repository (git clone)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="sourcetree.html">Introduction to SourceTree</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="sourcetree.html">Introduction to SourceTree</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
+      </div>
     </div>
 
     <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
