--- a/guides/commit.html
+++ b/guides/commit.html
@@ -14,9 +14,11 @@
     <h1>Add Commits (git commit)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="pull.html">Update from GitHub (git pull)</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="import-eclipse.html">Import to Eclipse IDE</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="import-eclipse.html">Import to Eclipse IDE</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="pull.html">Update from GitHub (git pull)</a>
+      </div>
     </div>
 
     <p id="description">The following guide shows you how to "save" your work by committing it into your local repository</p>
