--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -14,9 +14,11 @@
     <h1>Import Project into Eclipse</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="commit.html">Commit a File</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="commit.html">Commit a File</a>       
+      </div>
     </div>
 
     <p id="description">The following guide shows you how to import the cloned repository into Eclipse IDE<br>
