--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -14,9 +14,11 @@
     <h1>Import Project into IntelliJ IDEA</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="import-eclipse.html">Import to Eclipse IDE</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="clone.html">Clone a Repository</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="clone.html">Clone a Repository</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="import-eclipse.html">Import to Eclipse IDE</a>
+      </div>
     </div>
 
     <p id="description">The following guide shows you how to import the cloned repository into JetBrains IntelliJ IDEA IDE<br>
