--- a/guides/pull.html
+++ b/guides/pull.html
@@ -14,9 +14,11 @@
     <h1>Update Local Project files from GitHub (git pull)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="push.html">Push to GitHub</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="commit.html">Commit a File</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="commit.html">Commit a File</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="push.html">Push to GitHub</a>
+      </div>
     </div>
 
     <p id="description">The following guide shows you how to update your local repository with the latest changes from GitHub</p>
