--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -14,9 +14,11 @@
     <h1>Update with latest changes to main branch (git rebase)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="amend.html">Amend Unpushed Commits</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="conflict.html">Resolve Code Conflicts</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="conflict.html">Resolve Code Conflicts</a>
+          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="nxtbtn" href="amend.html">Amend Unpushed Commits</a>
+      </div>
     </div>
 
     <p id="description">The following guide shows you how to update your current branch with code from another branch that may have more commits since you have branched off it<br>
