--- a/guides/template.html
+++ b/guides/template.html
@@ -14,9 +14,11 @@
     <h1>Template</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <div id="breadcrumb-ctrl">
+          <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <a class="button" id="nxtbtn" href="../index.html">Next</a>
+      </div>
     </div>
 
     <p id="description">Brief Description</p>
