Meant to say "now" not "not"

--- a/guides/pr.html
+++ b/guides/pr.html
@@ -48,7 +48,7 @@
         <img class="image" src="../media/pr-4.jpg"/>
         <li>Continue clicking <i>Confirm merge</i> here</li>
         <img class="image" src="../media/pr-5.jpg"/>
-        <li>When you are done you can switch back to the master branch (you may not delete the branch if needed)</li>
+        <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)</li>
         <img class="image" src="../media/pr-6.jpg"/>
       </ol>
     
