Add TODO to site

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <h1>Extra Guides</h1>
     <p><a href="https://git-scm.com/book/en/v2">Git Holy Grail Book</a></p>
     <p><a href="https://confluence.atlassian.com/get-started-with-sourcetree">Atlassian's Official "Get Started with SourceTree" Guide</a></p>
+  
+    <h1>Internal TODO for this site</h1>
+    <p>Create a GitLab equivalent for the links here</p>
 
     <h1>Projects</h1>
     <p><i>Note: This is only for project members. It will not be relevant to any public viewers. So please ignore if you are not a related Project Member</i></p>
