--- a/guides/github.html
+++ b/guides/github.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <br/>
-    <pre class="prettyprint">
+    <pre class="compatibility">
       This file only relates to <i class="fab fa-github"></i> GitHub.
       <a href="gitlab.html">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
     </pre>
