--- a/guides/gitlab.html
+++ b/guides/gitlab.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 <br/>
-    <pre class="prettyprint">
+    <pre class="compatibility">
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
       <a href="github.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
