--- a/guides/gitlab.html
+++ b/guides/gitlab.html
@@ -26,7 +26,7 @@
       <a href="github.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
-    <p id="description">This page will give you a brief guide on the <a href="https://github.com">GitHub.com</a> User Interface. It is color coded to tell you what it's referring to</p>
+    <p id="description">This page will give you a brief guide on the <a href="https://gitlab.com">GitLab.com</a> User Interface. It is color coded to tell you what it's referring to</p>
 
     <h2>Quick Jump References</h2>
     <ul>
