More updates to the index page
Adds more IDE and reflect GitLab as well

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 
     <h2>What's required for this</h2>
     <ul>
-      <li>A GitHub Account (Create one at <a href="https://github.com">GitHub.com</a>)</li>
+      <li>A <a href="https://github.com">GitHub.com <i class="fab fa-github"></i></a> or <a href="https://gitlab.com">GitLab.com <i class="fab fa-gitlab"></i></a> Account</li>
       <li><a href="https://www.sourcetreeapp.com/">SourceTree Git GUI</a> (Requires an <a href="https://bitbucket.org/account/signup/">Atlassian Account</a> to register)</li>
       <li>A Programming IDE<ul>
         <li>Java: <a href="https://www.eclipse.org/downloads/">Eclipse</a>, <a href="https://www.jetbrains.com/idea/download/">IntelliJ Community/Ultimate</a> or <a href="https://spider.eng.auburn.edu/user-cgi/grasp/grasp.pl?;dl=download_jgrasp.html">jGrasp</a></li>
         <li>Python: <a href="https://www.anaconda.com/">Anaconda</a>, <a href="https://www.jetbrains.com/pycharm/download/">PyCharm Community/Professional</a> or <a href="https://www.python.org/downloads/">Python IDLE</a></li>
         <li>PHP: <a href="https://www.jetbrains.com/phpstorm/download/">PHPStorm</a> or any Notepad application</li>
-        <li>C#/C/C++: <a href="https://visualstudio.microsoft.com/downloads/">Visual Studio</a> or <a href="http://www.codeblocks.org/downloads">Code::Blocks</a></li>
+        <li>C#/C/C++: <a href="https://visualstudio.microsoft.com/downloads/">Visual Studio</a>, <a href="https://www.jetbrains.com/clion/download/">CLion</a> or <a href="http://www.codeblocks.org/downloads">Code::Blocks</a></li>
+        <li>Android: <a href="https://developer.android.com/studio">Android Studio</a></li>
+        <li>iOS: <a href="https://apps.apple.com/sg/app/xcode/id497799835?mt=12">xCode</a> (Requires Mac OS)</li>
       </ul></li>
     </ul>
 
