Duplicated files as placeholders for upcoming gitlab pages

--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -22,8 +22,8 @@
     </div>
     <br/>
     <pre class="compatibility">
-      This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      This file only relates to <i class="fab fa-gitlab"></i> GitLab.
+      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
