--- a/guides/clone-gitlab.html
+++ b/guides/clone-gitlab.html
@@ -23,8 +23,8 @@
     </div>
     <br/>
     <pre class="compatibility">
-      This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      This file only relates to <i class="fab fa-gitlab"></i> GitLab.
+      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
