--- a/guides/mr.html
+++ b/guides/mr.html
@@ -23,8 +23,8 @@
     </div>
     <br/>
     <pre class="compatibility">
-      This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      This file only relates to <i class="fab fa-gitlab"></i> GitLab.
+      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">This will show you how to do git-flow style of committing. Ideal git guidelines is that we never commit anything to master directly. So instead, we make use
