--- a/guides/webide.html
+++ b/guides/webide.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>View Builds (Travis CI) - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>Template - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -12,35 +12,26 @@
   </head>
 
   <body>
-    <h1>View Builds on Travis CI</h1>
+    <h1>Template</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
-          <a class="button" id="prebtn" href="amend.html">Amend Unpushed Commits</a>
-          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+          <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <a class="button" id="nxtbtn" href="../index.html">Next</a>
       </div>
     </div>
     <br/>
     <pre class="compatibility">
-      This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      This file only relates to <i class="fab fa-gitlab"></i> GitLab.
+      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
-    <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
-    Or wonder why your build is failing for some reason? This will show you how to access the CI to view the logs</p>
-
-    <ol>
-      <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
-      <img class="image" src="../media/travis-1.jpg"/>
-      <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <img class="image" src="../media/travis-2.jpg"/>
-      <li>You can now view the logs as shown in the picture below</li>
-      <img class="image" src="../media/travis-3.jpg"/>
-    </ol>
+    <p id="description">Brief Description</p>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video preload="metadata" controls src="../media/How to Travis.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
