Did the linking between the pages

--- a/guides/clone.html
+++ b/guides/clone.html
@@ -24,7 +24,7 @@
     <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      <a href="clone-gitlab.html">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
     </pre>
 
     <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
