--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -23,8 +23,7 @@
     </div>
     <br/>
     <pre class="compatibility">
-      This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
     </pre>
 
     <p id="description">The following guide shows you how to resolve conflicts if it happens (either through rebasing or pulling code). Console usage is required</p>
