--- a/guides/mr.html
+++ b/guides/mr.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create PR and do Features - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>Create MR and do Features - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>Issue Pull Request (PR) for features</h1>
+    <h1>Issue Merge Request (MR) for features (WIP)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
@@ -24,7 +24,7 @@
     <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
-      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
+      <a href="pr.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">This will show you how to do git-flow style of committing. Ideal git guidelines is that we never commit anything to master directly. So instead, we make use
