--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>View Builds (Travis CI) - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>View Builds (GitLab CI) - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>View Builds on Travis CI</h1>
+    <h1>View Builds on GitLab CI (WIP)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
@@ -23,7 +23,7 @@
     <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
-      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
+      <a href="buildserver.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
