--- a/guides/pr.html
+++ b/guides/pr.html
@@ -24,7 +24,7 @@
     <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      <a href="mr.html">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
     </pre>
 
     <p id="description">This will show you how to do git-flow style of committing. Ideal git guidelines is that we never commit anything to master directly. So instead, we make use
