--- a/guides/template.html
+++ b/guides/template.html
@@ -22,9 +22,18 @@
       </div>
     </div>
     <br/>
+
+    <!-- Pick One -->
     <pre class="compatibility">
       This file only relates to <i class="fab fa-github"></i> GitHub.
       <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+    </pre>
+    <pre class="compatibility">
+      This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
+    </pre>
+    <pre class="compatibility">
+      This file only relates to <i class="fab fa-gitlab"></i> GitLab.
+      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">Brief Description</p>
