--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -23,7 +23,7 @@
     <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-github"></i> GitHub.
-      <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
+      <a href="pipeline.html">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
     </pre>
 
     <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
