--- a/guides/clone-gitlab.html
+++ b/guides/clone-gitlab.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clone Repository - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>Clone Repository (GitLab) - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>Clone Repository (git clone)</h1>
+    <h1>GitLab Clone Repository (git clone) (WIP)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
@@ -24,7 +24,7 @@
     <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
-      <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
+      <a href="clone.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
     <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
