Updated index pages correspondingly
We also updated the breadcrumbs as well

--- a/index.html
+++ b/index.html
@@ -22,19 +22,30 @@
           <li><a href="/guides/gitlab.html"><i class="fab fa-gitlab"></i> GitLab (Coming Soon)</a></li>
       </ul></li>
       <li><a href="/guides/sourcetree.html"><i class="fab fa-sourcetree"></i> Introduction to SourceTree</a></li>
-      <li><a href="/guides/clone.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> How to clone a repository</a></li>
+      <li>Clone Repository<ul>
+        <li><a href="/guides/clone.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub</a></li>
+        <li><a href="/guides/clone-gitlab.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab (Coming Soon)</a></li>
+      </ul></li>
       <li>How to import cloned <i class="fab fa-git"></i> Repo into IDE<ul>
           <li><a href="/guides/import-intellij.html">IntelliJ IDEA</a></li>
           <li><a href="/guides/import-eclipse.html">Eclipse</a></li>
-        </ul></li>
+      </ul></li>
       <li><a href="/guides/commit.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to commit a file</a></li>
       <li><a href="/guides/pull.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to update local repo with new code from GitHub/GitLab (pull)</a></li>
       <li><a href="/guides/push.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to push to GitHub/GitLab</a></li>
-      <li><a href="/guides/pr.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> <b>IMPORTANT</b> How to create a feature (Pull Requests)</a></li>
-      <li><a href="/guides/conflict.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> Resolve Code Conflicts</a></li>
+      <li><b>Important</b> How to create a feature (PR/MR)<ul>
+        <li><a href="/guides/pr.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub Pull Requests</a></li>
+        <li><a href="/guides/mr.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab Merge Requests (Coming Soon)</a></li>
+      </ul></li>
+      <li><a href="/guides/conflict.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> Resolve Code Conflicts</a></li>
+      <li><a href="/guides/conflict-web.html"><i class="fab fa-gitlab"></i> Resolve Code Conflicts online during a MR (Coming Soon)</a></li>
       <li><a href="/guides/rebase.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> Rebase Branch against another branch</a></li>
       <li><a href="/guides/amend.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> <i>Optional</i> Amend unpushed commits</a></li>
-      <li><a href="/guides/buildserver.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> <i>Optional</i> View CI Builds</a></li>
+      <li><i>Optional</i> View CI Builds<ul>
+        <li><a href="/guides/buildserver.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub (Travis CI)</a></li>
+        <li><a href="/guides/pipeline.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab (GitLab CI) (Coming Soon)</a></li>
+      </ul></li>
+      <li><a href="/guides/webide.html"><i class="fab fa-gitlab"></i> <i>Optional</i> Modify code with GitLab's Web IDE (Coming Soon)</a></li>
     </ul>
 
     <h2>What's required for this</h2>
