Updated the remaining pages

--- a/guides/amend.html
+++ b/guides/amend.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous" />
   </head>
 
   <body>
@@ -20,6 +21,10 @@
           <a class="button" id="nxtbtn" href="buildserver.html">View CI Builds</a>
       </div>      
     </div>
+    <br/>
+    <pre class="compatibility">
+      This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
+    </pre>
 
     <p id="description">This guide briefly shows you how you can amend any unpushed commits. It is useful if you forgot a single line and do not want to have a new commit for it. Console usage is required<br>
     <i>Note: This will only work for the latest commit, other commits will require advanced git use</i></p>
