--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous" />
   </head>
 
   <body>
@@ -20,6 +21,10 @@
           <a class="button" id="nxtbtn" href="amend.html">Amend Unpushed Commits</a>
       </div>
     </div>
+    <br/>
+    <pre class="compatibility">
+      This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
+    </pre>
 
     <p id="description">The following guide shows you how to update your current branch with code from another branch that may have more commits since you have branched off it<br>
     This is extremely useful in the case where you may be working on your own branch and in the meantime the <i>master</i> branch has been updated. By rebasing, you are able to test 
