--- a/guides/template.html
+++ b/guides/template.html
@@ -24,13 +24,21 @@
     <br/>
 
     <!-- Pick One -->
+    <!-- GitHub Only -->
+    <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-github"></i> GitHub.
       <a href="">Click here to view the <i class="fab fa-gitlab"></i> GitLab Version</a>
     </pre>
+
+    <!-- Both GitLab and GitHub -->
+    <br/>
     <pre class="compatibility">
       This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
     </pre>
+
+    <!-- GitLab Only -->
+    <br/>
     <pre class="compatibility">
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
       <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
