Attempting to generate breadcrumb buttons automatically

--- a/guides/github.html
+++ b/guides/github.html
@@ -16,8 +16,8 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
-          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-          <a class="button" id="nxtbtn" href="sourcetree.html">Introduction to SourceTree</a>
+        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <a class="button" id="nxtbtn" href="../index.html">Next</a>
       </div>
     </div>
     <br/>
