--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -16,9 +16,9 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
-          <a class="button" id="prebtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
-          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-          <a class="button" id="nxtbtn" href="commit.html">Commit a File</a>       
+        <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <a class="button" id="nxtbtn" href="../index.html">Next</a>       
       </div>
     </div>
 
