--- a/guides/clone.html
+++ b/guides/clone.html
@@ -16,9 +16,9 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
-          <a class="button" id="prebtn" href="sourcetree.html">Introduction to SourceTree</a>
-          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-          <a class="button" id="nxtbtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
+        <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <a class="button" id="nxtbtn" href="../index.html">Next</a>
       </div>
     </div>
     <br/>
