--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -16,9 +16,9 @@
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
       <div id="breadcrumb-ctrl">
-          <a class="button" id="prebtn" href="clone.html">Clone a Repository</a>
-          <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-          <a class="button" id="nxtbtn" href="import-eclipse.html">Import to Eclipse IDE</a>
+        <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <a class="button" id="nxtbtn" href="../index.html">Next</a>
       </div>
     </div>
 
