--- a/guides/clone.html
+++ b/guides/clone.html
@@ -14,11 +14,11 @@
   <body>
     <h1>Clone Repository (git clone)</h1>
     <div id="sidebar">
-      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
-        <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <button type="button"><a class="button" id="prebtn" href="../index.html">Previous</a></button>
         <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-        <a class="button" id="nxtbtn" href="../index.html">Next</a>
+        <button type="button"><a class="button" id="nxtbtn" href="../index.html">Next</a></button>
       </div>
     </div>
     <br/>
