--- a/guides/github.html
+++ b/guides/github.html
@@ -14,10 +14,10 @@
   <body>
     <h1>Introduction to GitHub</h1>
     <div id="sidebar">
-      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
         <select name="breadcrumb-jump" id="breadcrumb-select"></select>
-        <a class="button" id="nxtbtn" href="../index.html">Next</a>
+        <button type="button"><a class="button" id="nxtbtn" href="../index.html">Next</a></button>
       </div>
     </div>
     <br/>
