--- a/guides/webide.html
+++ b/guides/webide.html
@@ -14,9 +14,9 @@
   <body>
     <h1>Web IDE (WIP)</h1>
     <div id="sidebar">
-      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
-        <a class="button" id="prebtn" href="../index.html">Previous</a>
+        <button type="button"><a class="button" id="prebtn" href="../index.html">Previous</a></button>
         <select name="breadcrumb-jump" id="breadcrumb-select"></select>
       </div>
     </div>
