[TEST] Testing Font Awesome Integration into Options

--- a/guides/template.html
+++ b/guides/template.html
@@ -19,6 +19,9 @@
         <button type="button"><a class="button" id="prebtn" href="../index.html">Previous</a></button>
         <select name="breadcrumb-jump" id="breadcrumb-select"></select>
         <button type="button"><a class="button" id="nxtbtn" href="../index.html">Next</a></button>
+        <select name="breadcrumb-jump" aria-label="Hi" class="test">
+          <option value="trololol">Test \f09b</option>
+        </select>
       </div>
     </div>
     <br/>
