Added Font Awesome into buttons
We will do it programmatically through javascript
Also we removed the sourcetree icon from viewing CI builds as it does not involve that
Finally we removed the test css tag

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <li><a href="/guides/rebase.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> Rebase Branch against another branch</a></li>
       <li><a href="/guides/amend.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> <i>Optional</i> Amend unpushed commits</a></li>
       <li><i>Optional</i> View CI Builds<ul>
-        <li><a href="/guides/buildserver.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub (Travis CI)</a></li>
-        <li><a href="/guides/pipeline.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab (GitLab CI) (Coming Soon)</a></li>
+        <li><a href="/guides/buildserver.html"><i class="fab fa-github"></i> GitHub (Travis CI)</a></li>
+        <li><a href="/guides/pipeline.html"><i class="fab fa-gitlab"></i> GitLab (GitLab CI) (Coming Soon)</a></li>
       </ul></li>
       <li><a href="/guides/webide.html"><i class="fab fa-gitlab"></i> <i>Optional</i> Modify code with GitLab's Web IDE (Coming Soon)</a></li>
     </ul>
